--- a/index.html
+++ b/index.html
@@ -7,30 +7,25 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Bolão do Oscar 2025 de Bibi
-    
-    <form id="nome-form">
-        <label for="nome">Digite seu nome para participar:</label>
-        <input type="text" id="nome" required>
-        <button type="submit">Iniciar Palpites</button>
-    </form>
+    <div class="container">
+        <h1>BOLÃO DO OSCAR 2025</h1>
+        <div class="form-container">
+            <h2>Digite seu nome para participar:</h2>
+            <input type="text" id="nomeUsuario" placeholder="Seu Nome" required>
+            <button id="iniciarBtn">Iniciar Palpites</button>
+        </div>
+    </div>
 
     <script>
-        document.getElementById("nome-form").addEventListener("submit", (e) => {
-            e.preventDefault();
-            const nomeUsuario = document.getElementById("nome").value.trim();
-
-            if (!nomeUsuario) {
-                alert("Por favor, insira um nome válido.");
+        document.getElementById("iniciarBtn").addEventListener("click", function() {
+            const nome = document.getElementById("nomeUsuario").value.trim();
+            if (nome === "") {
+                alert("Por favor, digite seu nome!");
                 return;
             }
-
-            sessionStorage.setItem("nomeUsuario", nomeUsuario);
+            localStorage.setItem("nomeUsuario", nome);
             window.location.href = "palpites.html";
         });
     </script>
-
-    <script src="scripts/main.js"></script>
-
 </body>
 </html>
