--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="brilho"></div>
     <div class="container">
         <h1>BOLÃO DO OSCAR 2025 DE BIBI</h1>
         <div class="form-container">
