--- a/obrigado.html
+++ b/obrigado.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <div class="confete"></div>
+  <div class="brilho"></div>
   <div class="container">
     <h1>🎉 Obrigada por Participar! 🎉</h1>
-    <p>Os resultados serão divulgados no dia **03/03/2025**.</p>
+    <p>Os resultados serão divulgados no dia 03/03/2025 (Segunda-feira).</p>
     <p>Mas sabemos que Bibi vai ganhar de você!</p>
-    <a href="index.html">Voltar para a Página Inicial</a>
   </div>
 </body>
 </html>
