--- a/palpites.html
+++ b/palpites.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="brilho"></div>
+    
     <h1>SELECIONE SEUS PALPITES</h1>
     
-    <form id="form-palpite">
-        <div id="categorias-container"></div>
+    <div id="categoriasContainer"></div>
+    <form id="formPalpites">
+        <!-- Outros elementos do formulário -->
         <button type="submit">Confirmar Palpites</button>
     </form>
 
